# library-management-system

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 999e103be947_add_unique_constraint_to_names_in_.py  bfd24876210e_initial_schema.py  f938b0d91f25_initial_commit.py
src/: config.py  constants.py  db.py  logger.py
src/api/: main.py
src/core/: db.py  dependencies.py
src/core/security/: __init__.py  jwt.py  password_hasher.py
src/repositories/: __init__.py  author_repo.py  base.py  book_category_repo.py  book_repo.py  errors.py  modifiers.py  publisher_repo.py  user_repo.py
src/routes/: __init__.py  auth.py  author.py  book.py  book_category.py  commons.py  publisher.py
src/schemas/: __init__.py  book.py  member.py  mixins.py  schemas.py  user.py
src/services/: __init__.py  auth_service.py  author_service.py  base.py  book_category_service.py  book_service.py  errors.py  publisher_service.py
tests/: conftest.py
tests/test_repositories/: test_author_repo.py  test_book_category_repo.py  test_book_repo.py  test_publisher_repo.py  test_user_repo.py
tests/test_security/: test_jwt.py  test_password_hasher.py
